@@ -73,6 +73,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
     testImplementation 'org.mockito:mockito-core:5.8.0'
     testImplementation 'org.mockito:mockito-inline:5.2.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.8.0'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.1'
 }
 
@@ -118,6 +119,11 @@ application {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED'
+    systemProperty 'mockito.mock-maker.inline', 'true'
 }
 
 // Protobuf configuration
